objects/Event_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Excl_VAT__c</fullName>
        <description>DF  -  removed : Amount_Incl_VAT__c -( Amount_Incl_VAT__c * 0.14)</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (Excl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booked_by_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Booked by Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Bookings</relationshipLabel>
        <relationshipName>Event_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Reference_Number__c</fullName>
        <label>Booking Reference Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Type__c</fullName>
        <inlineHelpText>Holds whether the booking type is company or individual.</inlineHelpText>
        <label>Booking Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event Bookings</relationshipLabel>
        <relationshipName>Event_Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <description>The field gives an indication for payment status of the event booking</description>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Event_Booking_Amount_Incl_Vat__c</fullName>
        <description>DF removed : Amount_Incl_VAT__c + Merchandise_Total_Amount__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Event Booking Amount (Incl Vat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Event Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Booking_Date__c</columns>
        <columns>Booking_Reference_Number__c</columns>
        <columns>Amount_Excl_VAT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>No_Delegates</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Booking_Date__c</columns>
        <columns>Booking_Reference_Number__c</columns>
        <columns>Amount_Excl_VAT__c</columns>
        <filterScope>Everything</filterScope>
        <label>No Delegates</label>
    </listViews>
    <nameField>
        <displayFormat>EB-{00000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>